@@ -3,6 +3,12 @@
 # 2. make sure that lines break at 80 chars for constricted display situations
 #<-------------------------------- 80 chars ---------------------------------->#
 
+2017-11-17 Matthias Scholz <ms@jammerhund.de>
+  * added methods for handling multiple ApplicationExitHandler in the
+    WorkbenchFrame. Set the old getApplicationExitHandler() and
+    setApplicationExitHandler() methods deprecated.
+  * ConnectionManager adjusted for the new ApplicationExitHandler stuff.
+
 2017-11-13 Giuseppe Aruta. 
   * RasterImageLayer <Sextante>: Spatial reference system srid and its location 
     are now stored as metadata on loading file. Updated Raster Info plugin.
